[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
rand = "0.8"
anyhow = "1.0.94"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
async-trait = "0.1.83"
bincode = "1.3.3"
chrono = "0.4.39"
rand_distr = "0.4.3"
surrealkv = { version = "0.7.0", optional = true }
rocksdb = { version = "0.22.0", features = ["lz4", "snappy"], optional = true }

[features]
default = ["surrealkv", "rocksdb"]
surrealkv = ["dep:surrealkv"]
rocksdb = ["dep:rocksdb"]
